test/pass/codegen/std/actions/wait/test.twge
block init {
    actions {
        wait(duration = 10000);
    }
}