test/fail/codegen/typeConversionBool/test.twge
block init {
    actions {
        actorTalk(wait = ActorMatch());
    }
}